// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

<div
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</div>
`;

exports[`composition hook should return with List props 1`] = `
Object {
  "className": "css-i1n9dg css-1hq7qsz css-1j9m13w",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

<div
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</div>
`;

exports[`overrides List.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: red;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

.emotion-0 {
  background-color: red;
}

<ul
  class="emotion-0 emotion-1 emotion-2"
>
  hello world
</ul>
`;

exports[`props should render a basic list 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-0 {
  margin-bottom: 0.25rem;
}

<ul
  class="emotion-12 emotion-1 emotion-2"
>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Four
  </li>
</ul>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

<ul
  class="emotion-0 emotion-1 emotion-2"
>
  Hello world
</ul>
`;

exports[`props should render correctly as a horizontal list 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  margin-bottom: 0.25rem;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li {
  display: inline-block;
  margin-right: 1rem;
  margin-bottom: unset;
}

<ul
  class="emotion-12 emotion-1 emotion-2"
>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Four
  </li>
</ul>
`;

exports[`props should render correctly as an ordered list 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  margin-bottom: 0.25rem;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 {
  list-style-type: decimal;
}

.emotion-12 .emotion-12 {
  list-style-type: lower-alpha;
}

.emotion-12 .emotion-12 .emotion-12 {
  list-style-type: lower-roman;
}

<ol
  class="emotion-12 emotion-1 emotion-2"
>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2"
  >
    Item Four
  </li>
</ol>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  list-style: unset;
  list-style-type: none;
}

.emotion-6:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-6 .emotion-6 {
  margin-left: 1rem;
}

.emotion-8.emotion-8 {
  list-style-position: inside;
  list-style-type: disc;
}

.emotion-0 {
  margin-bottom: 0.25rem;
}

.emotion-26.emotion-26 {
  list-style-position: inside;
  list-style-type: circle;
}

.emotion-14.emotion-14 {
  list-style-type: georgian;
}

.emotion-23.emotion-23 {
  list-style-type: circle;
}

<div>
  <ul
    class="emotion-6 emotion-1 emotion-8"
  >
    <li
      class="emotion-0 emotion-1 emotion-2"
    >
      Item 1
    </li>
    <li
      class="emotion-0 emotion-1 emotion-2"
    >
      Item 2
    </li>
  </ul>
  <ul
    class="emotion-6 emotion-1 emotion-26"
  >
    <li
      class="emotion-0 emotion-1 emotion-2"
    >
      Item 1
    </li>
    <li
      class="emotion-0 emotion-1 emotion-14"
    >
      Item 2
    </li>
    <ul
      class="emotion-6 emotion-1 emotion-23"
    >
      <li
        class="emotion-0 emotion-1 emotion-2"
      >
        Item 1
      </li>
      <li
        class="emotion-0 emotion-1 emotion-2"
      >
        Item 2
      </li>
    </ul>
  </ul>
</div>
`;

exports[`theming List.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

.emotion-0 {
  background-color: red;
}

<ul
  class="emotion-0 emotion-1 emotion-2"
>
  hello world
</ul>
`;
